# speckylang

./: Cargo.toml  README.md
examples/: ansi.specky  bmi-calculator.specky  brainfuck.specky  bubblesort.specky  collatz-conjecture.specky  fibonacci.specky  functions.specky  langtons_ant.specky  mandelbrot.specky  minesweeper.specky  multi-machine.specky  number_guessing.specky  prime.specky  snakes_and_ladders.specky  speed.specky  time.specky  war.specky  your-age-is.specky
examples/pi/: gauss-legendre.specky  leibniz-series.specky  nilakantha-series.specky  wallis-product.specky
src/: ast.rs  main.rs  parser.rs  run.rs  test.rs  token.rs  tokens.rs
src/parser/: error.rs  expression.rs  mod.rs  statement.rs  value.rs
src/test/: examples.rs  features.rs  mod.rs
test/: 99-bottles-of-beer.specky  alternating-sequence.specky  bmi-calculator.specky  brainfuck.specky  bug.specky  collatz-conjecture.specky  conways_gol.specky  factorial.specky  fizzbuzz.specky  hello-world-n.specky  mirror-machine.specky  multi-machine.specky  number_guessing.specky  prime.specky  speed.specky  time.specky  truth-machine.specky  your-age-is.specky
test/pi/: wallis-product.specky
test/quine/: specky_1.specky
