[package]
name = "speckylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
fnv = "1.0.7"
logos = "0.13.0"
lyneate = "0.2.0"
num-bigfloat = "1.7.0"
num-bigint = "0.4.4"
