[package]
name = "speckylang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
fnv = "1.0.7"
itertools = "0.14.0"
logos = "0.16.1"
lyneate = "0.2.1"
num-bigfloat = { git = "https://github.com/SpeckyYT/num-bigfloat", version = "1.7.2" }
num-bigint = "0.4.6"
